--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="oboi">
     <ul class="navigation">
-        <a href="50x60x.html" class="button">Рок-н-ролл</a>
+        <a href="index.html" class="button">Рок-н-ролл</a>
         <a href="sovrem.html" class="button">Современная поп музыка</a>
         <a href="sovet.html" class="button">Советская музыка</a>
         <a href="klass.html" class="button">Классическая музыка</a>  
@@ -17,19 +17,19 @@
         <h2 class="naz">Рок-н-ролл</h2>
     </section>
     <section class="left">
-        <img src="/media/litl.jpg" alt="" class="photo-left">
+        <img src="./media/litl.jpg" alt="" class="photo-left">
         <h5 class="ima-left">Litl Richard</h5>
         <p class="text-left">Литл Ричард – это известный американский певец, пианист и композитор, 
             которого уже давно по праву называют одним из основателей рок-н-ролла.
             Его зажигательные танцевальные композиции «Tutti Frutti», «Lucille», «Long Tall Sally», 
             а также многие-многие другие уже давно стали настоящей классикой данного музыкального стиля.
         </p>
-        <audio class="audio-left" controls src="/media/s.mp3"></audio>
+        <audio class="audio-left" controls src="./media/s.mp3"></audio>
         <p class="ob-music-left">Long Tall Sally</p>
         <p class="mini-text-left">Известная песня Литла Ричарда</p> 
     </section>
     <section class="right">
-        <img src="/media/chuck.jpg" alt="" class="photo-right">
+        <img src="./media/chuck.jpg" alt="" class="photo-right">
         <h5 class="ima-right">Chuck Berry</h5>
         <p class="text-right">Величайший рок-музыкант, стоявший у истоков становления культового музыкального 
             направления – Чак Берри  — родился в Сент-Луисе, в многодетной негритянской семье. 
@@ -37,7 +37,7 @@
              Мать – Марта Берри – работала в местной школе, а вот отец- Генри Берри — имел непосредственное 
              отношение к церкви —  он  был в ней диаконом. Маленький Чак с удовольствием следовал их примеру, 
              делая первые шаги на пути к мировому успеху и признанию.</p>
-        <audio class="audio-right" controls src="/media/Chuck_Berry_-_Johnny_B_Goode_47856934.mp3"></audio>
+        <audio class="audio-right" controls src="./media/Chuck_Berry_-_Johnny_B_Goode_47856934.mp3"></audio>
         <p class="ob-music-right">Johnny B. Goode</p>
         <p class="mini-text-right">Очень популярная песня Чака Берри</p> 
     </section>
