--- a/klass.html
+++ b/klass.html
@@ -8,7 +8,7 @@
 </head>
 <body class="oboi">
     <ul class="navigation">
-        <a href="50x60x.html" class="button">Рок-н-ролл</a>
+        <a href="index.html" class="button">Рок-н-ролл</a>
         <a href="sovrem.html" class="button">Современная поп музыка</a>
         <a href="sovet.html" class="button">Советская музыка</a>
         <a href="klass.html" class="button">Классическая музыка</a>  
@@ -17,25 +17,25 @@
         <h2 class="naz">Классическая музыка</h2>
     </section>
     <section class="left">
-        <img src="/media/чайковский.jpg" alt="" class="photo-left">
+        <img src="./media/чайковский.jpg" alt="" class="photo-left">
         <h5 class="ima-left">Пётр Чайковский</h5>
         <p class="text-left">Петр Ильич Чайковский (1840–1893 гг.) – знаменитый русский композитор, дирижер. 
             Один из величайших композиторов мира, автор более 80 музыкальных произведений, 
             среди которых известнейшие балеты «Щелкунчик» и «Лебединое озеро». Один из самых исполняемых 
             композиторов во всем мире.
         </p>
-        <audio class="audio-left" controls src="/media/Evgenijj_Svetlanov_Gosudarstvennyjj_simfonicheskijj_orkestr_SSSR_Pjotr_Ilich_CHajjkovskijj_-_Lebedinoe_ozero_soch_20a_No_1_Scena_72032949.mp3"></audio>
+        <audio class="audio-left" controls src="./media/Evgenijj_Svetlanov_Gosudarstvennyjj_simfonicheskijj_orkestr_SSSR_Pjotr_Ilich_CHajjkovskijj_-_Lebedinoe_ozero_soch_20a_No_1_Scena_72032949.mp3"></audio>
         <p class="ob-music-left">Лебединое озеро</p>
         <p class="mini-text-left">Популярная композиция Чайковского</p> 
     </section>
     <section class="right">
-        <img src="/media/бетховен.png" alt="" class="photo-right">
+        <img src="./media/бетховен.png" alt="" class="photo-right">
         <h5 class="ima-right">Людвиг ван Бетховен</h5>
         <p class="text-right">Людвиг ван Бетховен (1770–1827 гг.) – великий немецкий композитор,
             пианист и дирижёр, представитель музыкального направления «венский классицизм». 
             В последних его произведениях прослеживаются оттенки романтизма. Потеряв слух в 27 лет,
             Людвиг ван Бетховен продолжил творить и писал во всех жанрах музыки своего времени.</p>
-        <audio class="audio-right" controls src="/media/Lyudvig_van_Betkhoven_-_Symphony_No_5_1st_Movement_48271209.mp3"></audio>
+        <audio class="audio-right" controls src="./media/Lyudvig_van_Betkhoven_-_Symphony_No_5_1st_Movement_48271209.mp3"></audio>
         <p class="ob-music-right">5-я симфония Бетховена</p>
         <p class="mini-text-right">Самая известная симфония Бетховена</p> 
     </section>
