--- a/sovet.html
+++ b/sovet.html
@@ -8,7 +8,7 @@
 </head>
 <body class="oboi">
     <ul class="navigation">
-        <a href="50x60x.html" class="button">Рок-н-ролл</a>
+        <a href="index.html" class="button">Рок-н-ролл</a>
         <a href="sovrem.html" class="button">Современная поп музыка</a>
         <a href="sovet.html" class="button">Советская музыка</a>
         <a href="klass.html" class="button">Классическая музыка</a>  
@@ -17,7 +17,7 @@
         <h2 class="naz">Советская музыка</h2>
     </section>
     <section class="left">
-        <img src="/media/цой.png" alt="" class="photo-left">
+        <img src="./media/цой.png" alt="" class="photo-left">
         <h5 class="ima-left">Виктор Цой</h5>
         <p class="text-left">Виктор Робертович Цой (1962–1990 гг.) — 
             советский музыкант, киноактёр, художник, автор песен. Основатель 
@@ -26,12 +26,12 @@
             Биография Виктора Цоя была полна ярких моментов, но трагически прервалась, когда певец был
              в самом расцвете лет.
         </p>
-        <audio class="audio-left" controls src="/media/Kino_-_Gruppa_krovi_47829944.mp3"></audio>
+        <audio class="audio-left" controls src="./media/Kino_-_Gruppa_krovi_47829944.mp3"></audio>
         <p class="ob-music-left">Группа крови</p>
         <p class="mini-text-left">Популярная песня Викторя Цоя</p> 
     </section>
     <section class="right">
-        <img src="/media/muslim.jpg" alt="" class="photo-right">
+        <img src="./media/muslim.jpg" alt="" class="photo-right">
         <h5 class="ima-right">Муслим Магомаев</h5>
         <p class="text-right">Муслим Магомаев – прославленный эстрадный и оперный
             певец, обладатель непревзойденного баритона, композитор, актер. 
@@ -43,7 +43,7 @@
             ансамблем, без него не обходился ни один «Голубой огонек» 
             и торжественный концерт во Дворце съездов.
             </p>
-        <audio class="audio-right" controls src="/media/Muslim_Magomaev_-_Serenada_Trubadura_48397923.mp3"></audio>
+        <audio class="audio-right" controls src="./media/Muslim_Magomaev_-_Serenada_Trubadura_48397923.mp3"></audio>
         <p class="ob-music-right">Серенада Трубадура</p>
         <p class="mini-text-right">Одна из известных песен Магомаева</p> 
     </section>
