--- a/sovrem.html
+++ b/sovrem.html
@@ -8,7 +8,7 @@
 </head>
 <body class="oboi">
     <ul class="navigation">
-        <a href="50x60x.html" class="button">Рок-н-ролл</a>
+        <a href="index.html" class="button">Рок-н-ролл</a>
         <a href="sovrem.html" class="button">Современная поп музыка</a>
         <a href="sovet.html" class="button">Советская музыка</a>
         <a href="klass.html" class="button">Классическая музыка</a>  
@@ -17,19 +17,19 @@
         <h2 class="naz">Современная поп музыка</h2>
     </section>
     <section class="left">
-        <img src="/media/клава.jpg" alt="" id="klava" class="photo-left">
+        <img src="./media/клава.jpg" alt="" id="klava" class="photo-left">
         <h5 class="ima-left">Клава Кока</h5>
         <p class="text-left">Клава Кока — талантливая певица, которая своей творческой биографией доказала: 
             нет ничего невозможного. За короткий срок она не только добилась невероятной популярности, но 
             и присоединилась к «Блэк Стар» тогда еще под руководством рэпера Тимати. И это несмотря на то,
              что стиль музыки артистки совершенно не похож на привычные речитативы участников лейбла.
         </p>
-        <audio class="audio-left" id="klava3" controls src="/media/Klava_Koka_-_Krash_69883827.mp3"></audio>
+        <audio class="audio-left" id="klava3" controls src="./media/Klava_Koka_-_Krash_69883827.mp3"></audio>
         <p id="klava2" class="ob-music-left">Краш</p>
         <p id="klava1" class="mini-text-left">Популярная песня Клавы Коки</p> 
     </section>
     <section class="right">
-        <img src="/media/шаман.jpg" alt="" class="photo-right">
+        <img src="./media/шаман.jpg" alt="" class="photo-right">
         <h5 class="ima-right">SHAMAN</h5>
         <p class="text-right">SHAMAN — популярный российский певец, поэт и композитор.
             За плечами артиста три музыкальных образования, включая РАМ им. 
@@ -38,7 +38,7 @@
             SHAMAN добился популярности благодаря интернету.
             Его хиты «Встанем» и «Я русский» надолго захватили тренды соцсетей и сделали его в 2022 году 
             самым обсуждаемым артистом в стране.</p>
-        <audio class="audio-right" controls src="/media/SHAMAN_-_YA_RUSSKIJJ_74622610.mp3"></audio>
+        <audio class="audio-right" controls src="./media/SHAMAN_-_YA_RUSSKIJJ_74622610.mp3"></audio>
         <p class="ob-music-right">Я РУССКИЙ!</p>
         <p class="mini-text-right">Патриотичная песня Шамана</p> 
     </section>
