--- a/sovet_dalee.html
+++ b/sovet_dalee.html
@@ -12,7 +12,7 @@
         <h2 id="sovet-nazad" class="naz">Советская музыка(Продолжение)</h2>
     </section>
     <section class="left">
-        <img src="/media/ДДТ.png" alt="" id="DDT" class="photo-left">
+        <img src="./media/ДДТ.png" alt="" id="DDT" class="photo-left">
         <h5 class="ima-left">Группа "ДДТ"</h5>
         <p class="text-left">Создание группы ДДТ, одной из самых 
             известных рок-групп в истории России, произошло в 1980 году.
@@ -23,12 +23,12 @@
             Геннадия Родина, Владимира Сигачева, Рината Шамсутдинова.
             Название «ДДТ» коллектив получил позже.
             </p>
-        <audio class="audio-left" id="mashina-vremeni-a1" controls src="/media/ДДТ  - Родина.mp3"></audio>
+        <audio class="audio-left" id="mashina-vremeni-a1" controls src="./media/ДДТ  - Родина.mp3"></audio>
         <p id="mashina-vremeni-a2" class="ob-music-left">Родина</p>
         <p id="mashina-vremeni-a3" class="mini-text-left">Одна из лучших песен «ДДТ»</p> 
     </section>
     <section class="right">
-        <img src="/media/mashina-vremeni.jpg" alt="" id="mashina-vremeni" class="photo-right">
+        <img src="./media/mashina-vremeni.jpg" alt="" id="mashina-vremeni" class="photo-right">
         <h5 class="ima-right">Машина времени</h5>
         <p class="text-right">«Машина времени» — российская рок-группа,
             одна из долгожителей на музыкальной сцене. За годы творчества
@@ -41,7 +41,7 @@
             территории СССР набирали популярность юношеские и студенческие группы, 
             подражавшие в своем творчестве британским The Beatles 
             и другим легендарным музыкантам, игравшим в жанре рок.</p>
-        <audio class="audio-right" controls src="/media/Mashina_vremeni_-_Bitva_s_durakami_64935843.mp3"></audio>
+        <audio class="audio-right" controls src="./media/Mashina_vremeni_-_Bitva_s_durakami_64935843.mp3"></audio>
         <p class="ob-music-right">Битва с дураками</p>
         <p class="mini-text-right">Одна из лучших песен группы "Машина времени" </p> 
     </section>
