--- a/50x60x_dalee.html
+++ b/50x60x_dalee.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="oboi">       
-    <a href="50x60x.html" class="back">←Назад</a>
+    <a href="index.html" class="back">←Назад</a>
     <section class="glav">
         <h2 class="naz">Рок-н-ролл(Продолжение)</h2>
     </section>
